# malleus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  malleus  pyproject.toml  requirements-all.txt  requirements-l2.txt
configs/: tool-gateway-default.yaml
docs/: agent-target-contract.md  agent-trace-contract.md  agent-trace-production-integration.md  agentic-injection-lab.md  artifact-compatibility.md  assessment-mode.md  assessment-profiles.md  attack-packs.md  benchmark-results.md  ci-gates.md  evidence-bundle.md  execution-principles.md  extensions.md  hidden-channel-inspector.md  index.md  interpreting-results.md  limitations.md  live-provider-assessments.md  methodology.md  migration-checklist.md  model-comparison.md  mutation-robustness.md  nvidia.md  production-stack-coverage.md  providers.md  quickstart.md  refusal-classifier.md  regression-tracking.md  release-notes-v0.1.0-rc1.md  release-readiness.md  remediation-and-regression.md  scoring-methodology.md  security-model.md  taxonomy.md  trace-schema.md  what-malleus-tests.md
examples/: __init__.py
scripts/: bootstrap  install_smoke.py  run_l2_real_integration_suite.py  run_wow_benchmark.py
tests/: conftest.py  test_adapters.py  test_adjudication.py  test_agent_adapter.py  test_agent_adapter_e2e.py  test_agent_lab.py  test_agent_surface_scoring_edges.py  test_agent_target_contracts.py  test_agent_trace_contract.py  test_agent_trace_summary_cli.py  test_anomaly_detector.py  test_artifact_firewall.py  test_assessment_catalog.py  test_assessment_cli.py  test_assessment_docs.py  (+118 more)
(+381 files in other folders)
