[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malleus-evals"
version = "0.1.0"
description = "Defensive evaluation harness for LLMs and agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Icham Benabbas"}]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "Jinja2>=3.1.4",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.2.0",
  "ruff>=0.8.0",
  "wheel>=0.43.0",
]
browser = [
  "playwright>=1.45.0",
]
openai-agents = [
  "openai-agents>=0.14.8",
]
langgraph = [
  "langgraph>=1.1.10",
]
langchain = [
  "langchain-core>=1.3.2",
]
l2 = [
  "playwright>=1.45.0",
  "openai-agents>=0.14.8",
  "langgraph>=1.1.10",
  "langchain-core>=1.3.2",
]

[project.scripts]
malleus = "malleus.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
malleus = ["assets/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
